fix: when jump links collapse into a disclosure, the red border for the open disclosure is removed

--- a/elements/rh-disclosure/rh-disclosure.css
+++ b/elements/rh-disclosure/rh-disclosure.css
@@ -87,3 +87,7 @@ details[open] {
     inset-block: -1px;
   }
 }
+
+:host(.mobile[has-jump-links]) details[open]::before {
+  border-inline-start-color: transparent;
+}
